전체페이지 연동+ 굿즈예약 병합+공용푸터,헤더 분리 진짜 너무 많은일이 있었다.